Add divs to display results

--- a/index.html
+++ b/index.html
@@ -15,5 +15,10 @@
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
     </div>
+    <br>
+    <div id="result"></div>
+    <br>
+    <div id="playerScr"></div>
+    <div id="computerScr"></div>
 </body>
 </html>
