Display running score and announce winner

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
     <br>
     <div id="playerScr"></div>
     <div id="computerScr"></div>
+    <br>
+    <div id="winner"></div>
 </body>
 </html>
